--- a/package.json
+++ b/package.json
@@ -24,8 +24,12 @@
     "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "json-server": "^0.17.3",
+    "raw-loader": "^4.0.2",
     "typescript": "^5.2.2",
+    "vite-plugin-svg-icons": "^2.0.1",
+    "vite-svg-loader": "^5.1.0",
     "vue-cli-plugin-vuetify": "~2.5.8",
+    "vue-svg-loader": "^0.16.0",
     "webpack-plugin-vuetify": "^2.0.0-alpha.0"
   }
 }
